<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_module</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="43622430+dcmde@users.noreply.github.com">cidn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
<!--  <buildtool_depend>rosidl_default_generators</buildtool_depend>-->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
