<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>template_module</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="43622430+dcmde@users.noreply.github.com">cidn</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <!--  With custom message-->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>rclcpp</depend>
    <!--  If it depends of another module -->
    <!--  <depend>other_module</depend>-->

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
